--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <h1>The Future of<br>Certificate Verification</h1>
                 <p>Experience the most secure and transparent way to issue and verify digital certificates using blockchain technology.</p>
                 <div class="cta-buttons">
-                    <a href="#issue" class="btn-primary">📝 Start Issuing</a>
-                    <a href="#verify" class="btn-primary">🔍 Verify Certificate</a>
+                    <button onclick="navigateToSection('issue')" class="btn-primary">📝 Start Issuing</button>
+                    <button onclick="navigateToSection('verify')" class="btn-primary">🔍 Verify Certificate</button>
                 </div>
             </div>
             <div class="features">
